--- a/src/main/resources/templates/memberManager.html
+++ b/src/main/resources/templates/memberManager.html
@@ -1,84 +1,251 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>manager</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 
-    <link rel="stylesheet" type="text/css" href="easyui/themes/default/easyui.css">
-    <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
-    <script type="text/javascript" src="easyui/jquery.min.js"></script>
-    <script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="easyui/locale/easyui-lang-zh_CN.js"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://cdn.bootcss.com/bootstrap-table/1.12.1/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-table/1.12.1/locale/bootstrap-table-zh-CN.min.js"></script>
 
-    <script type="text/javascript" src="jquery.edatagrid.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#table').bootstrapTable({
+                url: '/memberinfo/list',
+                striped: true,
+                height: 580,
+                pagination: true,
+                paginationLoop: false,
+                pageSize: 11,
+                showRefresh: true,
+                clickToSelect: true,
+                search: true,
+                toolbar: '#toolbar',
+                onDblClickRow: function (row) {
+                    $("#title").text("编辑该纪录");
+                    $("#submit").attr('class', 'btn btn-warning');
+                    $("#submit").text("修改");
+                    $("#form").attr('action', host() + '/memberinfo/update');
+                    $("#form")[0].reset();
+                    $("#memberId").val(row.memberId);
+                    $("#memberMobile").val(row.memberMobile);
+                    $("#memberName").val(row.memberName);
+                    $("#memberPasswd").val(row.memberPasswd);
+                    $("#memberEmail").val(row.memberEmail);
+                    $("#memberLoginNum").val(row.memberLoginNum);
+                    $("#createTime").val(row.createTime);
+                    $("#isSell").val(row.isSell);
+                    $("#memberState").val(row.memberState);
+                    $("#memberPic").val(row.memberPic);
+                    $("#formBox").modal('show');
+                },
+                columns: [{
+                    checkbox: true
+                }, {
+                    field: 'memberId',
+                    title: 'ID'
+                }, {
+                    field: 'memberMobile',
+                    title: '手机号'
 
-    <script type="text/javascript">
-        $(function () {
-            $('#tt').edatagrid({
-                idField:'memberId',
-                url: '/memberinfo/pageList',
-                pagination:true,
-                fitColumns:true,
-                scrollbarSize:0,
-                title:"会员管理",
-                toolbar: '#btnbox',
-
-                saveUrl: '/memberinfo/saveMember',
-                updateUrl: '/memberinfo/saveMember',
-                destroyUrl: '/memberinfo/deleteMember',
+                }, {
+                    field: 'memberName',
+                    title: '会员名称'
+                }, {
+                    field: 'memberPasswd',
+                    title: '密码'
+                }, {
+                    field: 'memberEmail',
+                    title: '邮箱'
+                }, {
+                    field: 'memberLoginNum',
+                    title: '登录次数'
+                }, {
+                    field: 'createTime',
+                    title: '注册时间'
+                }, {
+                    field: 'isSell',
+                    title: '发布商品权限',
+                    formatter: function (value, row, index) {
+                        if (value == 1) {
+                            return "允许";
+                        } else if (value == 0) {
+                            return "禁止";
+                        }
+                    }
+                }, {
+                    field: 'memberState',
+                    title: '会员开启状态',
+                    formatter: function (value, row, index) {
+                        if (value == 1) {
+                            return "开启";
+                        } else if (value == 0) {
+                            return "关闭";
+                        }
+                    }
+                }, {
+                    field: 'memberPic',
+                    title: '头像',
+                    formatter: function (value, row, index) {
+                        return "<img src='" + value + "' width='25' height='25'>";
+                    }
+                }]
             });
-            $('#tt').datagrid('reload');
+            $('#remove').click(function () {
+                var ids = $.map($('#table').bootstrapTable('getSelections'), function (row) {
+                    return row.memberId;
+                });
+                var json = JSON.stringify(ids);
+                $.ajax({
+                    type: 'post',
+                    url: host() + '/memberinfo/deleteMember',
+                    contentType: 'application/json;charset=utf-8',
+                    data: json
+                });
+                $('#table').bootstrapTable('remove', {
+                    field: 'memberId',
+                    values: ids
+                });
+            });
+            $("#add").click(function () {
+                $("#form")[0].reset();
+                $("#title").text("添加新纪录");
+                $("#submit").attr('class', 'btn btn-info');
+                $("#submit").text("添加");
+                $("#form").attr('action', host() + '/memberinfo/add');
+                $("#formBox").modal('show');
+            });
+            $("#submit").click(function () {
+                $("#form").submit();
+            });
+            $("#checkAll").click(function () {
+                $("#table").bootstrapTable('checkAll');
+            });
+            $("#uncheckAll").click(function () {
+                $("#table").bootstrapTable('uncheckAll');
+            });
         });
-        function sell(value,row,index){
-            if(value==1){
-                return "允许";
-            }else if(value==0){
-                return "禁止";
-            }
+        function host() {
+            return "http://" + window.location.host;
         }
-        function state(value,row,index){
-            if(value==1){
-                return "开启";
-            }else if(value==0){
-                return "关闭";
-            }
-        }
-        function photo(value,row,index){
-            return "<img src='"+value+"' width='20' height='20'>";
-        }
-
     </script>
+    <style>
+        .container-fliud {
+            margin: 0px 15px;
+        }
+    </style>
 </head>
 <body>
-<h1>会员管理</h1>
-<div id="container" class="easyui-layout">
-    <div id="btnbox">
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true" onclick="javascript:$('#tt').edatagrid('addRow')"> 添加</a>
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-save',plain:true" onclick="javascript:$('#tt').edatagrid('saveRow')"> 保存</a>
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true" onclick="javascript:$('#tt').edatagrid('cancelRow')"> 取消</a>
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-cancel',plain:true"onclick="javascript:$('#tt').edatagrid('destroyRow')"> 删除</a>
+<div class="container-fliud">
+    <div id="toolbar">
+        <button id="checkAll" class="btn btn-default">全选</button>
+        <button id="uncheckAll" class="btn btn-default">反选</button>
+        <button id="remove" class="btn btn-danger">批量删除</button>
+        <button id="add" class="btn btn-info">添加</button>
+    </div>
+    <table id="table"></table>
+
+    <div id="formBox" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="title"></h4>
+                </div>
+
+
+                <div class="modal-body">
+                    <form id="form" class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">ID:</label>
+                            <div class="col-sm-2">
+                                <input name="memberId" id="memberId" type="text" class="form-control">
+                            </div>
+
+                            <label class="col-sm-2 control-label">手机号:</label>
+                            <div class="col-sm-2">
+                                <input name="memberMobile" id="memberMobile" type="text" class="form-control">
+                            </div>
+
+                            <label class="col-sm-2 control-label">会员名字:</label>
+                            <div class="col-sm-2">
+                                <input name="memberName" id="memberName" type="text" class="form-control">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+
+                            <label class="col-sm-2 control-label">密码:</label>
+                            <div class="col-sm-2">
+                                <input name="memberPasswd" id="memberPasswd" type="text" class="form-control">
+                            </div>
+
+                            <label class="col-sm-2 control-label">邮箱:</label>
+                            <div class="col-sm-2">
+                                <input name="memberEmail" id="memberEmail" type="text" class="form-control">
+                            </div>
+
+                            <label class="col-sm-2 control-label">登录次数：</label>
+                            <div class="col-sm-2">
+                                <input name="memberLoginNum" id="memberLoginNum" type="text" class="form-control">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+
+
+                            <label class="col-sm-2 control-label">注册时间:</label>
+                            <div class="col-sm-4">
+                                <input name="createTime" id="createTime" type="date" class="form-control">
+                            </div>
+
+                            <label class="col-sm-2 control-label">发布权限:</label>
+                            <div class="col-sm-1">
+                                <input name="isSell" id="isSell" checked type="radio" class="form-control"
+                                       value="1"><label col-sm-1>是</label>
+                            </div>
+                            <div class="col-sm-1">
+                                <input name="isSell" type="radio" class="form-control" value="0"><label
+                                    col-sm-1>否</label>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">会员开启状态：</label>
+                            <div class="col-sm-1">
+                                <input name="memberState" id="memberState" checked type="radio" class="form-control"
+                                       value="1"><label col-sm-1>开启</label>
+                            </div>
+                            <div class="col-sm-1">
+                                <input name="memberState" type="radio" class="form-control" value="0"><label
+                                    col-sm-1>关闭</label>
+                            </div>
+                            <label class="col-sm-2 control-label">头像:</label>
+                            <div class="col-sm-2">
+                                <input name="memberPic" id="memberPic" type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+
+                    </form>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button id="submit" type="button">提交</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                </div>
+            </div>
+        </div>
     </div>
 
-<table id="tt"  width="100%" singleSelect="true" fitColumns="true">
-    <thead>
-    <tr>
-        <th field="memberId" editor="text"   >ID</th>
-        <th field="memberMobile"  editor="{type:'textbox',options:{required:true}}">手机号</th>
-        <th field="memberName"  editor="text">名字</th>
-        <th field="memberBirthday"  >生日</th>
-        <th field="memberPasswd"  editor="text">密码</th>
-        <th field="memberEmail"  editor="text">邮箱</th>
-        <th field="memberWw"  >微信openid</th>
-        <th field="memberLoginNum"  >登录次数</th>
-        <th field="createTime"  >注册时间</th>
-        <th field="memberLoginTime"  >当前登录时间</th>
-        <th field="memberOldLoginTime"  >上次登录时间</th>
-        <th field="isSell"  editor="text" formatter="sell">发布商品权限</th>
-        <th field="memberState"  editor="text" formatter="state">会员开启状态</th>
-        <th field="memberPic"   formatter="photo">头像</th>
-    </tr>
-    </thead>
-</table>
 </div>
 </body>
 </html>
