--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -12,8 +12,8 @@
             padding: 0px;
         }
         #bar{
-            height: 100px;
             background-color: #5f5f5f;
+            height: 100px;
             float: left;
         }
         #nav{
@@ -51,7 +51,9 @@
 <body>
 <div class="container-fluid">
 
-    <div id="bar" class="col-md-12"></div>
+    <div id="bar" class="col-md-12">
+        <div id="signout" class="btn btn-success pull-right col-md-1"><h4>登出</h4></div>
+    </div>
     <div id="nav" class="col-md-2">
         <button id="memberManager" class="btn btn-primary col-md-12"><i class="fa fa-user"></i> 会员管理</button>
         <button id="articleManager" class="btn btn-primary col-md-12"><i class="fa fa-file-text"></i> 文章管理</button>
@@ -60,17 +62,27 @@
         <button id="advertisementManager" class="btn btn-primary col-md-12"><i class="fa fa-picture-o"></i> 广告管理</button>
         <button id="goodsManager" class="btn btn-primary col-md-12"><i class="fa fa-shopping-bag"></i> 商品管理</button>
         <button id="categoryManager" class="btn btn-primary col-md-12"><i class="fa fa-filter"></i> 类别管理</button>
-        <button id="b8" class="btn btn-primary col-md-12"><i class="fa fa-cog"></i> 系统设置</button>
+        <button id="adminManager" class="btn btn-primary col-md-12"><i class="fa fa-cog"></i> 系统设置</button>
     </div>
-    <iframe id="workspace"  class="col-md-10" src="/articleManager"></iframe>
+    <iframe id="workspace"  class="col-md-10" src="/welcome"></iframe>
     <div id="copyright" class="col-md-12">
         <div id="author">BY 刘建宇&万领顶&卢芳</div>
     </div>
 </div>
 <script>
 
-    $("button").click(function () {$("button").attr('class','btn btn-primary col-md-12');})
+    $("button").click(function () {$("button").attr('class','btn btn-primary col-md-12');});
 
+    $("#signout").click(function () {
+        $.get(host()+"/admin/signout",function (data) {
+            window.location.href=host()+"/login";
+        });
+
+    });
+
+    function host() {
+        return "http://"+window.location.host;
+    }
     set("memberManager");
     set("articleManager");
     set("commentManager");
@@ -78,6 +90,7 @@
     set("advertisementManager");
     set("goodsManager");
     set("categoryManager");
+    set("adminManager");
 
     function set(module) {
         $("#"+module).click(function (){
