--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,20 +10,18 @@
     <script src="https://cdn.bootcss.com/jquery.form/4.2.2/jquery.form.js"></script>
 
     <style>
-        body{
-            background-color: #b8eecf;
-        }
+
     </style>
 </head>
-<body>
+<body class="bg-info">
 <div class="container-fliud">
-        <form id="form" action="/admin" class="form-horizontal col-md-offset-4 col-md-4">
+        <form id="form" action="/admin/login" class="form-horizontal col-md-offset-4 col-md-4 ">
             <div class="form-group">
                 <br /><br /><br /><br /><br /><br /><br /><br />
             </div>
             <div class="form-group col-sm-10">
-                <label class="col-sm-4 control-label">ID:</label>
-                <div class="col-sm-8"> <input name="adminLoginNum" type="number" class="form-control" /></div>
+                <label class="col-sm-4 control-label">管理员名:</label>
+                <div class="col-sm-8"> <input name="adminName" type="text" class="form-control" /></div>
             </div>
             <div class="form-group col-sm-10">
                 <label class="col-sm-4 control-label">密码:</label>
